feat: 完善登陆注册、权限相关路由、API、服务
